<resources>
    <string name="app_name">CoordinatorLayoutDemo</string>
    <!---->
    <string name="ext1">标题不带snap,我带snap.</string>
    <string name="not_direct_child">非AppBarLayout直接子View,scroll_flag无效</string>
    <string name="between_not_scroll"> 在无scrollFlags或scrollFlags无效的组件之下的所有组件,scroll_flag无效</string>
    <string name="ext1_enter_always">enterAlways,只要下拉就显示</string>
    <!---->
    <string name="exit_unit_collapsed">ExitUnitCollapsed</string>
    <string name="enter_always_collapsed">EnterAlways和Collapsed</string>
    <string name="enter_unit_collapsed">EnterAlwaysCollapse</string>
    <!---->
    <string name="behavior_child">Behavior控制的View</string>
    <string name="behavior_dependency_a">被观察的View_A</string>
    <string name="behavior_dependency_b">被观察的View_B</string>
    <!---->
    <string name="custom_simple_behavior">.CustomSimpleBehavior</string>
    <string name="text_hint_search">搜索</string>
    <string name="i_am_image_roller">我是轮播图</string>
    <!---->
    <string name="titleEnable">app:titleEnable</string>
    <string name="contentScrim">app:contentScrim</string>
    <string name="statusBarScrim">app:statusBarScrim</string>
    <string name="collapseParallaxMultiplier">app:layout_collapseParallaxMultiplier</string>
    <string name="parallaxMultiplierNum">0.5</string>
    <string name="show_bottom_sheet">显示/隐藏底部菜单</string>
    <string name="show_bottom_sheet_dialog">显示底部菜单弹窗</string>
    <!---->
    <string-array name="tab_item">
        <item>Tab1</item>
        <item>Tab2</item>
        <item>Tab3</item>
    </string-array>
    <string-array name="main_menu">
        <item>官方样例1</item>
        <item>官方样例1扩展</item>
        <item>官方样例2</item>
        <item>官方样例2扩展</item>
        <item>官方样例2扩展1</item>
        <item>自定义中间折叠带下拉刷新</item>
        <item>BottomSheet样例</item>
        <item>自定义简单Behavior</item>
        <item>自定义简单Behavior1</item>
    </string-array>
    <!---->
</resources>
