<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/layout_title"/>

    <cn.jestar.coodinatorlayoutdemo.view.CustomSimpleBehaviorView
        android:id="@+id/child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/behavior_child"
        />
    <Button
        android:id="@+id/tv_dependency_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_48"
        android:text="@string/behavior_dependency_a"
        />
    <Button
        android:id="@+id/tv_dependency_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_128"
        android:text="@string/behavior_dependency_b"
        />
</android.support.design.widget.CoordinatorLayout>
