<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_recycler"/>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll"
            >

            <include
                layout="@layout/layout_title"
                />
        </FrameLayout>

        <TextView
            style="@style/style_text"
            android:background="@color/colorPrimaryDark"
            android:text="@string/ext1"
            app:layout_scrollFlags="scroll|snap"/>

        <TextView
            style="@style/style_text"
            android:text="@string/ext1_enter_always"
            app:layout_scrollFlags="scroll|enterAlways"
            />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/style_text"
                android:background="@color/colorPrimaryDark"
                android:text="@string/not_direct_child"
                app:layout_scrollFlags="scroll|enterAlways"
                />
        </FrameLayout>

        <TextView
            style="@style/style_text"
            android:text="@string/between_not_scroll"
            app:layout_scrollFlags="scroll|enterAlways"
            />

        <include
            layout="@layout/layout_tab_layout"
            />
    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>